# sourcemod

./: .arcconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  AMBuildScript  CONTRIBUTING.md  NOTICE.txt  README.md  TODO.txt  appveyor.yml  build_requirements.txt  changelog.txt  configure.py  modules.versions  product.version  pushbuild.txt
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
compiler-init/: libpawnc.c  osdefs.h  pawncc.c  sc.h  sc1.c  sc2.c  sc3.c  sc4.c  sc5.scp  sc6.c  sci18n.c  scstate.c  scvars.c  sp_file.h  spcomp.sln  spcomp.vcproj
configs/: admin_groups.cfg  admin_levels.cfg  admin_overrides.cfg  adminmenu_cfgs.txt  adminmenu_custom.txt  adminmenu_grouping.txt  adminmenu_maplist.ini  adminmenu_sorting.txt  admins.cfg  admins_groups.cfg  admins_levels.cfg  admins_simple.cfg  admins_simple.ini  banreasons.txt  core.cfg  databases.cfg  languages.cfg  map_disabled_plugins.cfg  maplists.cfg  menu_configs.cfg  menu_maplist.ini  permissions.cfg  plugin_settings.cfg
containers/: Containerfile.spcomp
core/: ADTFactory.cpp  ADTFactory.h  AMBuilder  AdminCache.cpp  AdminCache.h  CConCmdManager.cpp  CConCmdManager.h  CConVarManager.cpp  CConVarManager.h  CDataPack.cpp  CDataPack.h  CDbgReporter.cpp  CDbgReporter.h  CGameConfigs.cpp  CGameConfigs.h  CHalfLife2.cpp  CHalfLife2.h  CLogger.cpp  CLogger.h  CMsgIdPool.h  CMsgListenerWrapper.h  CPlayer.cpp  CPlayer.h  CPlayerManager.cpp  CPlayerManager.h  CTextParsers.cpp  CTextParsers.h  CTimerSys.cpp  CTranslator.cpp  CTranslator.h  CUserMessages.cpp  CUserMessages.h  CellArray.h  CellRecipientFilter.h  ChatTriggers.cpp  ChatTriggers.h  ConCmdManager.cpp  ConCmdManager.h  ConCommandBaseIterator.h  ConVarManager.cpp  (+172 more)
extensions/webclient/rust/: .gitignore  Cargo.toml
extensions/webclient/rust/src/: http.rs  lib.rs  registry.rs  ssrf.rs  ws.rs
gamedata/: core.games.txt  funcommands.games.txt  sdktools.games.ep2.txt  sdktools.games.l4d.txt  sdktools.games.txt  sm-cstrike.games.txt  sm-events-games.txt  sm-events.games.txt  sm-tf2.games.txt  structs.gamedata.txt
licenses/: LICENSE.txt
loader/: AMBuilder  Makefile  loader.cpp  svn_version.h  svn_version.tpl  version.rc
msvc10/: SourceMod.sln
plugins/: AMBuilder  DynamicTargeting.sp  admin-auth.sp  admin-base.sp  admin-flatfile.sp  admin-sql-prefetch.sp  admin-sql-threaded.sp  adminhelp.sp  adminmenu.sp  antiflood.sp  basebans.sp  basechat.sp  basecomm.sp  basecommands.sp  basefuncommands.sp  basefunvotes.sp  basetriggers.sp  basevotes.sp  beacon.sp  clientprefs.sp  compile.sh  funcommands.sp  funvotes.sp  mapchooser.sp  mapmanager.sp  nextmap.sp  nominations.sp  playercommands.sp  randomcycle.sp  reservedslots.sp  rockthevote.sp  slapslay.sp  sounds.sp  sql-admin-manager.sp  test.sma
public/: AutoHandleRooter.h  IADTFactory.h  IAdminSystem.h  ICellArray.h  IDBDriver.h  IDataPack.h  IExtensionSys.h  IForwardSys.h  IGameConfigs.h  IGameHelpers.h  IHandleSys.h  IKeyValueStack.h  ILibrarySys.h  IMemoryPointer.h  (+32 more)
(+3517 files in other folders)
